style.css
*{
padding:0;
margin: 0;
}

html{
scroll-behavior: smooth;
}

section{
    width: 100%;
    height: 100vh;
}

/*Navigation Bar CSS*/
section nav{
display: flex;
justify-content: space-around;
align-items: center;
background-color: white;
box-shadow:  0 0 10px rgba(0,0,0,0.5);
position: fixed;
right: 0;
left: 0;
}

section nav ul{
list-style: none;
}

section nav ul li a{
text-decoration: none;
color: black;
font-size: 17px;
font-weight: 500;
font-family: sans-serif;
transition: 0.1s;
}

section nav ul li a::after{
content: '';
width: 0;
height: 2px;
background: #F88A22;
display: block;
transition: 0.4s linear;
}

section nav ul li a:hover::after{
width: 100%;
}

section nav ul li{
display: inline-block;
margin: 0 15px;
}

section nav ul li a:hover{
color: #F88A22;
}

section nav .logo img{
    width: 100px;
    margin:7px 0;
}

section nav .icon i{
    font-size: 18px;
    margin: 0 5px;
    color: black;
}

section nav .icon i:hover{
    color: #F88A22;
}

/*Login and Sign Up button in nav bar*/

section nav .navButtons button{
    width: 130px;
    height: 40px;
    background-color: #F88A22;
    background-image: linear-gradient(1deg, #e6811c, #F88A22 99%);
    background-size: calc(100% + 20px) calc(100% + 20px);
    align-items: center;
    justify-content: center;
    border:none;
    border-radius: 100px;
    border-width: 0;
    box-shadow: none;
    box-sizing: border-box;
    font-size: 17px;
    font-weight: 500;
    font-family: sans-serif;
    appearance: none;
    line-height: 1.5;
    padding: 6px 20px;
    position: relative;
    text-align: center;
    text-decoration: none;
    transition: background-color 0.3s, box-shadow 0.3s;
    color: black;
    cursor: pointer;
    border-radius: 100PX;
}

section nav .navButtons button:hover{
    background: blue;
}

